--- a/zh_CN/appendix/catwin32.html
+++ b/zh_CN/appendix/catwin32.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>catwin32 &mdash; HinetPy v0.7.2.dev43+g7fc59ac 文档</title>
+  <title>catwin32 &mdash; HinetPy v0.7.2.dev45+g1244fdf 文档</title>
       <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=80d5e7a1" />
       <link rel="stylesheet" type="text/css" href="../_static/css/theme.css?v=19f00094" />
 
@@ -15,7 +15,7 @@
   
         <script src="../_static/jquery.js?v=5d32c60e"></script>
         <script src="../_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-        <script src="../_static/documentation_options.js?v=c19edd9f"></script>
+        <script src="../_static/documentation_options.js?v=afb0593f"></script>
         <script src="../_static/doctools.js?v=888ff710"></script>
         <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
         <script src="../_static/translations.js?v=beaddf03"></script>
@@ -38,7 +38,7 @@
             HinetPy
           </a>
               <div class="version">
-                v0.7.2.dev43+g7fc59ac
+                v0.7.2.dev45+g1244fdf
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="../search.html" method="get">
